[package]
name = "os"
version = "0.1.0"
authors = ["mateo"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"

# Rust uses OS specific lib for unwinding(libunwind on Linux) so we disable it by aborting instead(on panic)
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
